--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     top: 50%;
     left: 50%;
     margin: -125px 0 0 -125px;
+    display: block;
+}
+
+#hide {
+    display: block;
 }
    
 .none-display {
@@ -271,11 +276,12 @@ body {
 }
 
 @keyframes animMathTestOne  {
-    100% {
-        transform: rotate(-360deg);
-    }
     0% {
-        transform: rotate(0deg);
+        scale: 0;
+        left: 120px;
+    }
+    100% {
+        scale:1;
     }
 }
 
@@ -419,3 +425,138 @@ body {
     );
 }
 
+ /* PRELOADER CSS */
+
+#preloader {
+    position: absolute;
+    width:200px;
+    height:80px;
+    left: 85px;
+    top: 60px;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    background: white;
+}
+
+.circle {
+    width:20px;
+    height:20px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #ff5656;
+    left:15%;
+    transform-origin: 50%;
+    animation: circle .5s alternate infinite ease;
+}
+
+@keyframes circle {
+    0%{
+        top:60px;
+        height:5px;
+        border-radius: 50px 50px 25px 25px;
+        transform: scaleX(1.7);
+    }
+    40%{
+        height:20px;
+        border-radius: 50%;
+        transform: scaleX(1);
+    }
+    100%{
+        top:0%;
+    }
+}
+.circle:nth-child(2) {
+    left:45%;
+    animation-delay: .2s;
+}
+
+.circle:nth-child(3) {
+    left:auto;
+    right:15%;
+    animation-delay: .3s;
+}
+
+.shadow {
+    width:20px;
+    height:4px;
+    border-radius: 50%;
+    background-color: rgba(213, 115, 115, 0.5);
+    position: absolute;
+    top:62px;
+    transform-origin: 50%;
+    z-index: -1;
+    left:15%;
+    filter: blur(1px);
+    animation: shadow .5s alternate infinite ease;
+}
+
+@keyframes shadow {
+    0%{
+        transform: scaleX(1.5);
+    }
+    40%{
+        transform: scaleX(1);
+        opacity: .7;
+    }
+    100%{
+        transform: scaleX(.2);
+        opacity: .4;
+    }
+}
+
+.shadow:nth-child(4) {
+    left: 45%;
+    animation-delay: .2s
+}
+
+.shadow:nth-child(5) {
+    left:auto;
+    right:15%;
+    animation-delay: .3s;
+}
+
+#preloader span {
+    position: absolute;
+    top:75px;
+    font-family: 'Lato';
+    font-size: 20px;
+    letter-spacing: 12px;
+    color: #000000;
+    left:15%;
+}
+
+/* Audio */
+
+.wrapper {
+    position: fixed;
+    left: -20px;
+}
+
+.player {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    transform: rotate(270deg);
+}
+
+.wrapper:before {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 200px;
+    background-color: #f55454;
+    margin: -350px auto 120px;
+}
+
+.img__src {
+    padding: 10px;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(255, 123, 100, 0.864);
+    border-radius: 8px;
+    background-position: center center;
+}
