--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@ body {
     left: -800px;
     width: 1879px;
     height: 980px;
-    z-index: -1;
+    z-index: -10;
     background: white;
 }
 
@@ -539,6 +539,7 @@ body {
 .wrapper {
     position: fixed;
     left: -20px;
+    z-index: 10;
 }
 
 .player {
@@ -573,13 +574,14 @@ body {
 /* GitHub */
 
 #gitHub {
-    position: absolute;
-    display: flex;
+    position: fixed;
+    /* display: flex; */
     flex-wrap: wrap;
     font-size: 12px;
     rotate: -90deg;
-    top: 500px;
-    left: 900px;
+    top: 850px;
+    left: 1700px;
+    z-index: 1;
 }
 
 #gitHub:before {
@@ -600,3 +602,43 @@ body {
     color: rgb(132, 196, 196);
     cursor:pointer;
 }
+
+/* Adaptive layout  */
+
+@media screen and (max-width:1280px) {
+    #gitHub {
+        top: 680px;
+        left: 1100px;
+    }
+    .back-preloader {
+        width: 1580px;
+        height: 890px;
+    }
+    #QuestTwoButton {
+        top: -250px;
+    }
+}
+
+
+@media screen and (max-width:1024px) {
+    .wrapper {
+        top: 300px;
+        left: -60px;
+    } 
+    #gitHub {
+        top: 480px;
+        left: 900px;
+    }
+    .back-preloader {
+        width: 1580px;
+        height: 890px;
+    }
+    #QuestTwoButton {
+        top: -150px;
+    }
+    #QuestTwoText {
+        position: absolute;
+        left: -290px;
+    }
+}
+/* Игра еще находится в бете так что обновбения будут попоже ( наверно =) ) */
